# readme_generator

./: pyproject.toml
.github/workflows/: push_checks.yml
readme_generator/: README.md  main.py
