[build-system]
requires = ["setuptools >= 65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9,<4"
name = "readme_generator"
dependencies = [
    "typer==0.*",
]
version = "0.0.0"

[project.scripts]
readme_generator = "readme_generator.main:cli"

[tool.setuptools.packages.find]
include = ["readme_generator"]
namespaces = false

[tool.pyright]
pythonVersion = "3.12"
reportIncompatibleVariableOverride = true
reportIncompatibleMethodOverride = true
useLibraryCodeForTypes = true
strictListInference = true
strictDictionaryInference = true
strictSetInference = true

[tool.ruff]
lint.select = [
  "A",
  "B007",
  "B009",
  "B010",
  "B013",
  "B014",
  "B015",
  "B018",
  "B020",
  "B023",
  "F401",
  "F402",
  "F541",
  "F634",
  "F841",
  "F842",
  "FAST001",
  "FAST002",
  "FURB",
  "I",
  "INP001",
  "PERF",
  "PIE",
  "PLC0414",
  "RET",
  "RUF",
  "SIM",
  "UP",
]
line-length = 80

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
split-on-trailing-comma = false

[tool.ruff.format]
skip-magic-trailing-comma = true

